# energy-decision-intelligence

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  charts.py  ci.yml  config.py  dashboard.py  generate_data.py  optimizer.py  pyproject.toml  requirements.txt  run.py  scenario.py  supply_chain.py
.claude/: settings.local.json
app/: dashboard.py
config/: params.yaml
data/: generate_data.py  market_data.py
notebooks/: analysis.ipynb
src/analysis/: demand_forecast.py  rolling_horizon.py  scenario.py  sensitivity.py
src/model/: optimizer.py  stochastic.py  supply_chain.py
src/viz/: charts.py  rolling_charts.py
tests/: test_domain.py  test_integration.py  test_optimizer.py  test_stochastic.py
